--- a/resume.tex
+++ b/resume.tex
@@ -50,7 +50,7 @@
     \vspace{0.5mm}\\\vspace{1mm}%
     \textsl{Master of Science in Robotics} \hfill \textbf{ August 2016 -- present}\vspace{-3mm}\\\vspace{-1mm}%
     \begin{list2}
-        \item Expected to graduate: Spring 2018
+%        \item Expected to graduate: Spring 2018
         \item Advisors:  \href{https://www.cs.utah.edu/~thermans/}{Dr. Tucker Hermans}
     \end{list2}\vspace{-1.5mm}
 %    \textbf{BMS College of Engineering}, Bangalore, India
@@ -88,6 +88,11 @@
     %__________________________________________________________________________________________________________________
 	% Projects
 	\section{\mysidestyle Selected\\Projects}
+	\textbf{Semantic Segmentation of Images using Deep Learning} \hfill \textbf{March 2018}
+	\begin{list2}
+		\item Implemented several graphical models and a deep learning algorithm for pixel wise segmentation of images
+		\item Achieved near state of the art performance with the deep learning algorithm (VGG16 + CRF).
+	\end{list2}\vspace{-1.5mm}
 	
 	\textbf{Twitter Spam Detection} \hfill \textbf{December 2017}
 	\begin{list2}
