this should change some stuff

--- a/resume.tex
+++ b/resume.tex
@@ -46,7 +46,7 @@
     % Education
     \section{\mysidestyle Education}
 
-    \textbf{University of Utah}, Salt Lake City, Utah
+    \textbf{University of Utah}, Salt Lake City, Utah \hfill \textbf{GPA: 3.36}
     \vspace{0.5mm}\\\vspace{1mm}%
     \textsl{Master of Science in Robotics} \hfill \textbf{ August 2016 -- present}\vspace{-3mm}\\\vspace{-1mm}%
     \begin{list2}
