--- a/resume.tex
+++ b/resume.tex
@@ -107,8 +107,8 @@
     \textsl{Graduate Research Assistant} \hfill \textbf{August 2016 -- present}\\ \vspace{-4.5mm}
 	\begin{list2}
 		\item Built a fast object detection and tracking pipeline, which is used by multiple teams in the Lab.
-		\item Implemented Grasp Controllers and end to end Grasping Pipelines with motion planning and execution.
-	\end{list2}\vspace{-1.5mm}
+		\item Implemented Grasp Controllers and end-to-end Grasping Pipelines with motion planning and execution.
+	\end{list2}\vspace{-2.25mm}
 
     \href{http://www.aero.iisc.ernet.in/~dinesh/web/}{\textbf{NMCAD Lab}}, Indian Institute of Science \vspace{1pt}\\\vspace{1pt}%
     \textsl{Research Intern} \hfill \textbf{January 2015 -- July 2016}\\ \vspace{-4.5mm}
@@ -168,7 +168,7 @@
 
 	\textbf{Autonomous Grasp Inference and Execution using Baxter and KUKA lwr4 Robots}\hfill \textbf{January 2017}
 	\begin{list2}
-		\item Designed an end to end grasping pipeline to grasp objects on a table autonomously.
+		\item Designed an end-to-end grasping pipeline to grasp objects on a table autonomously.
 		\item Training data was collected in Gazebo simulation and tested in real world. [\href{https://robot-learning.cs.utah.edu/project/grasp\_inference}{ISRR 2017}]
 	\end{list2}\vspace{-3.2mm}
 
