--- a/resume.tex
+++ b/resume.tex
@@ -39,8 +39,8 @@
     
     \section{\myheadingstyle Contact \\ Information}
 
-    \texttt{1495 E 100 S rm 1550 MEK}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
-    \texttt{Salt Lake City, Utah 84112}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
+    \texttt{7605 S Quatar Way}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
+    \texttt{Aurora, Colorado 80016}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 
     %%%%%%%%%%%%%%
