updated programming languages order

--- a/resume.tex
+++ b/resume.tex
@@ -50,7 +50,7 @@
 	\sectionseperator
 	\section{\myheadingstyle Skills} 
 	
-	\textbf{Languages}: Python, MATLAB, C++. \\[1mm]
+	\textbf{Languages}: C++, Python, MATLAB. \\[1mm]
 	\textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Blender, Keras. \\[1mm]
 	% \textbf{Design Tools}: SolidWorks, PTC Creo Parametric, Autodesk Inventor, ANSYS. \\[1mm]
 	\textbf{Robots}: KUKA LBR4+, Rethink Robotics Baxter, SimLab's Allegro Hand, Quanser HD2.%
