Moved to California, Updated address

--- a/resume.tex
+++ b/resume.tex
@@ -39,8 +39,8 @@
     
     \section{\myheadingstyle Contact \\ Information}
 
-    \texttt{7605 S Quatar Way}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
-    \texttt{Aurora, Colorado 80016}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
+    \texttt{Near Saravanaa Bhavan}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
+    \texttt{Fremont, California 94536}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 
     %%%%%%%%%%%%%%
@@ -115,7 +115,7 @@
     \begin{list2}
     	\item Worked on the design and fabrication of a Flapping Wing Micro Aerial Vehicle (MAV).
     	\item Developed autonomous navigation and collision checking algorithms for the MAV.
-    \end{list2}\vspace{-0.5mm}
+    \end{list2}\vspace{-0.1mm}
 
 
     %%%%%%%%%%%%%%%%
