--- a/resume.tex
+++ b/resume.tex
@@ -39,7 +39,7 @@
     
     \section{\myheadingstyle Contact \\ Information}
 
-    \texttt{Near Saravanaa Bhavan}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
+    \texttt{Lexington St}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
     \texttt{Fremont, California 94536}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 
