--- a/resume.tex
+++ b/resume.tex
@@ -51,7 +51,7 @@
 	\section{\myheadingstyle Skills} 
 	
 	\textbf{Languages}: C++, Python, MATLAB. \\[1mm]
-	\textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Blender, Keras. \\[1mm]
+	\textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Keras, SQL. \\[1mm]
 	% \textbf{Design Tools}: SolidWorks, PTC Creo Parametric, Autodesk Inventor, ANSYS. \\[1mm]
 	\textbf{Robots}: KUKA LBR4+, Rethink Robotics Baxter, SimLab's Allegro Hand, Quanser HD2.%
 
