--- a/resume.tex
+++ b/resume.tex
@@ -154,10 +154,10 @@
 		\item Model classifies collisions with an \textbf{accuracy of 84.7\%} and is \textasciitilde 30\% faster than FCL.
 	\end{list2}\vspace{-3.2mm}
 	
-	\textbf{The Search for Twitter Spam Bots} \hfill \textbf{December 2017}
+	\textbf{Simultaneous Robot State Estimation and Object Tracking} \hfill \textbf{December 2017}
 	\begin{list2}
-		\item Implemented a machine learning algorithms from scratch to predict if a twitter user's content is spam.
-		\item \textbf{Boosted trees} achieved an accuracy of \textbf{97\%} and \textbf{ranked 1st} in \href{https://www.kaggle.com/c/uofu-ml-fall-2017/leaderboard}{Kaggle competition}.
+		\item Implemented an \textbf{Extended Kalman Filter} algorithm to estimate the object pose from noisy JointState.
+		\item Used a \textbf{Gaussian Mixture Model} to plan a trajectory for Baxter arm to the object for grasping.
 	\end{list2}\vspace{-3.2mm}
 
 	\textbf{Video Action recognition using Deep Learning}\hfill \textbf{October 2017}
