--- a/resume.tex
+++ b/resume.tex
@@ -39,8 +39,8 @@
     
     \section{\myheadingstyle Contact \\ Information}
 
-    \texttt{Lexington St}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
-    \texttt{Fremont, California 94536}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
+    \texttt{Alvarado Ave}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
+    \texttt{Walnut Creek, CA 94597}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 
     %%%%%%%%%%%%%%
@@ -102,20 +102,27 @@
     
     \sectionseperator
     \section{\myheadingstyle Experience}
+    
+    \href{https://www.omron.com/global/americas/usa.html}{\textbf{Omron Research Center of America (ORCA)}} \vspace{1pt}\\\vspace{1pt}%
+    \textsl{Motion Planning Engineer} \hfill \textbf{November 2018 -- Present}\\ \vspace{-4.5mm}
+    \begin{list2}
+    	\item Motion Planning and Grasp Planning for Random Bin Picking
+    	\item Trajectory Optimization and more stuff. Ssshhhhh....
+    \end{list2}\vspace{-2.25mm}
 
     \href{https://robot-learning.cs.utah.edu}{\textbf{Learning Lab for Manipulation Autonomy (LL4MA Lab)}}, University of Utah \vspace{1pt}\\\vspace{1pt}%
-    \textsl{Graduate Research Assistant} \hfill \textbf{August 2016 -- present}\\ \vspace{-4.5mm}
+    \textsl{Graduate Research Assistant} \hfill \textbf{August 2016 -- 2018}\\ \vspace{-4.5mm}
 	\begin{list2}
 		\item Built a fast object detection and tracking pipeline, which is used by multiple teams in the Lab.
 		\item Implemented Grasp Controllers and end-to-end Grasping Pipelines with motion planning and execution.
-	\end{list2}\vspace{-2.25mm}
+	\end{list2}\vspace{-0.1mm}
 
-    \href{http://www.aero.iisc.ernet.in/~dinesh/web/}{\textbf{NMCAD Lab}}, Indian Institute of Science \vspace{1pt}\\\vspace{1pt}%
-    \textsl{Research Intern} \hfill \textbf{January 2015 -- July 2016}\\ \vspace{-4.5mm}
-    \begin{list2}
-    	\item Worked on the design and fabrication of a Flapping Wing Micro Aerial Vehicle (MAV).
-    	\item Developed autonomous navigation and collision checking algorithms for the MAV.
-    \end{list2}\vspace{-0.1mm}
+%    \href{http://www.aero.iisc.ernet.in/~dinesh/web/}{\textbf{NMCAD Lab}}, Indian Institute of Science \vspace{1pt}\\\vspace{1pt}%
+%    \textsl{Research Intern} \hfill \textbf{January 2015 -- July 2016}\\ \vspace{-4.5mm}
+%    \begin{list2}
+%    	\item Worked on the design and fabrication of a Flapping Wing Micro Aerial Vehicle (MAV).
+%    	\item Developed autonomous navigation and collision checking algorithms for the MAV.
+%    \end{list2}\vspace{-0.1mm}
 
 
     %%%%%%%%%%%%%%%%
