updated phone and address

--- a/resume.tex
+++ b/resume.tex
@@ -33,25 +33,17 @@
 
 \begin{resume}
 
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    %%% Contact Information %%%
-    %%%%%%%%%%%%%%%%%%%%%%%%%%%
-    
-    \section{\myheadingstyle Contact \\ Information}
-
-    \texttt{Alvarado Ave}                            \hfill phone: \texttt{\href{tel:13855287547}{+1 (385) 528-7547}}          \vspace{0mm}\\\vspace{0mm}%
-    \texttt{Walnut Creek, CA 94597}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 
     %%%%%%%%%%%%%%
     %%% Skills %%%
     %%%%%%%%%%%%%%
     
-	\sectionseperator
+    
 	\section{\myheadingstyle Skills} 
 	
 	\textbf{Languages}: C++, Python, MATLAB. \\[1mm]
-	\textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Keras, SQL. \\[1mm]
+	\textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Keras. \\[1mm]
 	% \textbf{Design Tools}: SolidWorks, PTC Creo Parametric, Autodesk Inventor, ANSYS. \\[1mm]
 	\textbf{Robots}: KUKA LBR4+, Rethink Robotics Baxter, SimLab's Allegro Hand, Quanser HD2.%
 
@@ -62,20 +54,20 @@
     
     \sectionseperator
     \section{\myheadingstyle Education}
-    \textbf{University of Utah}, Salt Lake City, Utah \hfill \texttt{GPA: 3.40}
+    \textbf{University of Utah}, Salt Lake City, Utah %\hfill \texttt{GPA: 3.40}
     \\\vspace{1mm}%
     \textsl{Master of Science in Robotics} \hfill \textbf{ Aug 2016 -- Aug 2018}\\%
 	% \begin{list2}
 	% 	\item Expected to graduate: Spring 2018
 	% 	\item Advisor:  \href{https://www.cs.utah.edu/~thermans/}{Dr. Tucker Hermans}
 	% \end{list2}\vspace{-1.5mm}
-    \textbf{BMS College of Engineering}, Bangalore, India \hfill \texttt{GPA: 3.52}
+    \textbf{BMS College of Engineering}, Bangalore, India %\hfill \texttt{GPA: 3.52}
     \\\vspace{1mm}%
     \textsl{Bachelor of Engineering in Mechanical Engineering (Robotics)} \hfill \textbf{Sept 2011 -- May 2015}\\%
 	% \begin{list2}
 	% 	\item Graduated with First Class Distinction.
 	% \end{list2}\vspace{-1.5mm}
-	\textbf{Relevant Coursework:} Probabilistic Modeling, 3D Computer Vision, Artificial Intelligence, Motion Planning, Machine Learning, Robotics, Robot Control and System Identification.
+	\textbf{Relevant Coursework:} Probabilistic Modeling, 3D Computer Vision, Artificial Intelligence, Motion Planning, Machine Learning, Convex Optimization, Robotics, Robot Control and System Identification.
 
 	%%%%%%%%%%%%%%%%%%
     %%% Coursework %%%
@@ -181,6 +173,16 @@
 
 	\textbf{Others:} Motion Planning: TrajOpt, RRT and Variants, RealTime RRT*; Image Segmentation with GMM, Image De-noising using MRF; 
 	
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	%%% Contact Information %%%
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	
+	\sectionseperator
+	\section{\myheadingstyle Contact \\ Information}
+	
+	\texttt{San Francisco Bay Area}                            \hfill phone: \texttt{\href{tel:13855551234}{+1 (385) 555-xxxx}}          \vspace{0mm}\\\vspace{0mm}%
+	\texttt{Sunny California}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 	%%%%%%%%%%%%%
 	%%% Links %%%
