remove clutter and reorganize

--- a/resume.tex
+++ b/resume.tex
@@ -4,14 +4,14 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8
 
-\documentclass[letterpaper, margin, line, 10.5pt]{resume}
+\documentclass[letterpaper, margin, line, 11pt]{resume}
 \usepackage{hyperref}
 \usepackage{xcolor}
 \hypersetup{
 	colorlinks=true,
 	linkcolor=cyan,
 	filecolor=blue,      
-	urlcolor=magenta,
+	urlcolor=[rgb]{0.8 0 0},
 }
 
 % FONTS
@@ -19,7 +19,7 @@
 \usepackage{xltxtra}
 \defaultfontfeatures{Mapping=tex-text}
 \setromanfont [Ligatures={Common}, Numbers={OldStyle}, Variant=01]{Times New Roman}
-\setmonofont[Scale=0.8]{Monaco}
+\setmonofont[Scale=0.85]{Menlo}
 
 
 \begin{document}
@@ -47,6 +47,33 @@
 	% \textbf{Design Tools}: SolidWorks, PTC Creo Parametric, Autodesk Inventor, ANSYS. \\[1mm]
 	\textbf{Robots}: KUKA LBR4+, Rethink Robotics Baxter, SimLab's Allegro Hand, Quanser HD2.%
 
+    %%%%%%%%%%%%%%%%%%
+	%%% Experience %%%
+	%%%%%%%%%%%%%%%%%%
+	
+	\sectionseperator
+	\section{\myheadingstyle Experience}
+	
+	\href{https://www.omron.com/global/americas/usa.html}{\textbf{Omron Research Center of America (ORCA)}} \vspace{1pt}\\\vspace{1pt}%
+	\textsl{Motion Planning Engineer} \hfill \textbf{November 2018 -- Present}\\ \vspace{-4.5mm}
+	\begin{list2}
+		\item Motion Planning and Grasp Planning for Random Bin Picking
+		\item Trajectory Optimization and more stuff. Ssshhhhh....
+	\end{list2}\vspace{-2.25mm}
+	
+	\href{https://robot-learning.cs.utah.edu}{\textbf{Learning Lab for Manipulation Autonomy (LL4MA Lab)}}, University of Utah \vspace{1pt}\\\vspace{1pt}%
+	\textsl{Graduate Research Assistant} \hfill \textbf{August 2016 -- 2018}\\ \vspace{-4.5mm}
+	\begin{list2}
+		\item Built a fast object detection and tracking pipeline, which is used by multiple teams in the Lab.
+		\item Implemented Grasp Controllers and end-to-end Grasping Pipelines with motion planning and execution.
+	\end{list2}\vspace{-0.1mm}
+	
+	%    \href{http://www.aero.iisc.ernet.in/~dinesh/web/}{\textbf{NMCAD Lab}}, Indian Institute of Science \vspace{1pt}\\\vspace{1pt}%
+	%    \textsl{Research Intern} \hfill \textbf{January 2015 -- July 2016}\\ \vspace{-4.5mm}
+	%    \begin{list2}
+	%    	\item Worked on the design and fabrication of a Flapping Wing Micro Aerial Vehicle (MAV).
+	%    	\item Developed autonomous navigation and collision checking algorithms for the MAV.
+	%    \end{list2}\vspace{-0.1mm}
 
 	%%%%%%%%%%%%%%%%%
     %%% Education %%%
@@ -88,33 +115,7 @@
      \mbox{\bf Kautilya Chenna}, Balakumar Sundaralingam, Tucker Hermans; \textit{International Symposium on Robotics Research (ISRR),} 2017. \texttt{[\href{http://www.cs.utah.edu/~thermans/papers/lu-isrr2017-deep-multifinger-grasping.pdf}{PDF}]} \texttt{[\href{https://robot-learning.cs.utah.edu/project/grasp\_inference}{CODE}]}%
 
 
-    %%%%%%%%%%%%%%%%%%
-    %%% Experience %%%
-    %%%%%%%%%%%%%%%%%%
-    
-    \sectionseperator
-    \section{\myheadingstyle Experience}
-    
-    \href{https://www.omron.com/global/americas/usa.html}{\textbf{Omron Research Center of America (ORCA)}} \vspace{1pt}\\\vspace{1pt}%
-    \textsl{Motion Planning Engineer} \hfill \textbf{November 2018 -- Present}\\ \vspace{-4.5mm}
-    \begin{list2}
-    	\item Motion Planning and Grasp Planning for Random Bin Picking
-    	\item Trajectory Optimization and more stuff. Ssshhhhh....
-    \end{list2}\vspace{-2.25mm}
 
-    \href{https://robot-learning.cs.utah.edu}{\textbf{Learning Lab for Manipulation Autonomy (LL4MA Lab)}}, University of Utah \vspace{1pt}\\\vspace{1pt}%
-    \textsl{Graduate Research Assistant} \hfill \textbf{August 2016 -- 2018}\\ \vspace{-4.5mm}
-	\begin{list2}
-		\item Built a fast object detection and tracking pipeline, which is used by multiple teams in the Lab.
-		\item Implemented Grasp Controllers and end-to-end Grasping Pipelines with motion planning and execution.
-	\end{list2}\vspace{-0.1mm}
-
-%    \href{http://www.aero.iisc.ernet.in/~dinesh/web/}{\textbf{NMCAD Lab}}, Indian Institute of Science \vspace{1pt}\\\vspace{1pt}%
-%    \textsl{Research Intern} \hfill \textbf{January 2015 -- July 2016}\\ \vspace{-4.5mm}
-%    \begin{list2}
-%    	\item Worked on the design and fabrication of a Flapping Wing Micro Aerial Vehicle (MAV).
-%    	\item Developed autonomous navigation and collision checking algorithms for the MAV.
-%    \end{list2}\vspace{-0.1mm}
 
 
     %%%%%%%%%%%%%%%%
@@ -123,53 +124,6 @@
     
 	\sectionseperator
 	\section{\myheadingstyle Selected \\ Projects}
-	\textbf{Extrinsic Calibration of Stereo Camera and Velodyne LiDAR} \hfill \textbf{June 2018}
-	\begin{list2}
-		\item Developed a ROS package to automate calibration between Velodyne VLP-16 and ZED stereo camera.
-		\item Reduced the mean point to point error by \textbf{72\%} compared to manual feature based calibration.
-	\end{list2}\vspace{-3.2mm}
-	
-	\textbf{Real-time Semantic Segmentation on Low-Power Android Devices} \hfill \textbf{May 2018}
-	\begin{list2}
-		\item Developed a fast background subtraction for portrait video based on modified \textbf{SegNet} model.
-		\item Model achieved a \textbf{mean IoU of 87.3\% at 30 FPS} on Google Pixel 2.
-	\end{list2}\vspace{-3.2mm}
-
-	\textbf{Estimating Depth from a single image using FCN Network} \hfill \textbf{March 2018}
-	\begin{list2}
-		\item Implemented a modified \textbf{FCN Net} and trained it on NYU Depth Dataset and KITTI Dataset.
-		\item Model achieved a mean \textbf{RMSE error of 0.294} on NYU Depth and \textbf{0.312} on KITTI Dataset.
-	\end{list2}\vspace{-3.2mm}
-
-	\textbf{Object Detection and Segmentation in Point Cloud data using PointNet} \hfill \textbf{January 2018}
-	\begin{list2}
-		\item Trained modified \textbf{PointNet} model on \textbf{YCB object dataset} and \textbf{BigBird dataset}.
-		\item Model runs at \textbf{24 fps} on a NVIDIA GeForce 1060 GPU with an accuracy of 88.3\%.
-	\end{list2}\vspace{-3.2mm}
-
-	\textbf{Grasp Collision detection using Convolutional Neural Networks} \hfill \textbf{Ongoing}
-	\begin{list2}
-		\item Developed a CNN model to detect collisions btw robot and environment using PointClouds and JointState.
-		\item Model classifies collisions with an \textbf{accuracy of 84.7\%} and is \textasciitilde 30\% faster than FCL.
-	\end{list2}\vspace{-3.2mm}
-	
-	\textbf{Simultaneous Robot State Estimation and Object Tracking} \hfill \textbf{December 2017}
-	\begin{list2}
-		\item Implemented an \textbf{Extended Kalman Filter} algorithm to estimate the object pose from noisy JointState.
-		\item Used a \textbf{Gaussian Mixture Model} to plan a trajectory for Baxter arm to the object for grasping.
-	\end{list2}\vspace{-3.2mm}
-
-	\textbf{Video Action recognition using Deep Learning}\hfill \textbf{October 2017}
-	\begin{list2}
-	\item Implemented a \textbf{Bi-Directional LSTM Model} on \textbf{VGG16} Net using Keras to classify actions in scenes.
-	\item Achieved a Mean Average Precision of \textbf{15.7 mAP} compared to the State of the Art of 21.4 mAP.
-	\end{list2}\vspace{-3.2mm}
-
-	\textbf{Autonomous Grasp Inference and Execution using Baxter and KUKA lwr4 Robots}\hfill \textbf{January 2017}
-	\begin{list2}
-		\item Designed an end-to-end grasping pipeline to grasp objects on a table autonomously.
-		\item Training data was collected in Gazebo simulation and tested in real world. [\href{https://robot-learning.cs.utah.edu/project/grasp\_inference}{ISRR 2017}]
-	\end{list2}\vspace{-3.2mm}
 
 	\textbf{Others:} Motion Planning: TrajOpt, RRT and Variants, RealTime RRT*; Image Segmentation with GMM, Image De-noising using MRF; 
 	
@@ -181,7 +135,7 @@
 	\sectionseperator
 	\section{\myheadingstyle Contact \\ Information}
 	
-	\texttt{San Francisco Bay Area}                            \hfill phone: \texttt{\href{tel:13855551234}{+1 (385) 555-xxxx}}          \vspace{0mm}\\\vspace{0mm}%
+	\texttt{San Francisco Bay Area}                            \hfill phone: \texttt{\href{tel:13855551234}{+1 (385) 555-xxxx }}          \vspace{0mm}\\\vspace{0mm}%
 	\texttt{Sunny California}                          \hfill email: \texttt{\href{mailto:chenna@outlook.com}{chenna@outlook.com}}       %
 
 	%%%%%%%%%%%%%
@@ -198,7 +152,7 @@
 \begin{center}
 	{\scriptsize  Last updated: \today\- •\- Typeset in \href{}{
 			\fontspec{Alegreya}\XeTeX }\\
-		\href{http://chenna.me/resume}{http://chenna.me/resume}}
+		\href{https://chenna.me/resume}{https://chenna.me/resume}}
 \end{center}
 
 \end{resume}
